2002-02-12  Alexandre Oliva  <aoliva@redhat.com>

	* config/tc-mn10300.c (other_registers): Added `epsw'.  Mark `pc'
	and `epsw' as available on AM33 and above only.
	(other_register_name): Add logic to handle machine type encoded in
	reg_number.

2002-02-11  Tom Rix  <trix@redhat.com>

	* config/tc-ppc.c (md_apply_fix3): Check for insert fop invalid for 
	xcoff64.

2002-02-11  Alexandre Oliva  <aoliva@redhat.com>

	* config/tc-sparc.c (U0x80000000, U0xffffffff): New constants.
	Use all over.

2002-02-11  Alexandre Oliva  <aoliva@redhat.com>

	* config/tc-sh.c (dot): Removed unused function.

2002-02-10  Richard Henderson  <rth@redhat.com>

	* doc/c-alpha.texi: New file.
	* doc/Makefile.am (CPU_DOCS): Add it.
	* doc/all.texi, doc/as.texinfo: Add hooks for Alpha.

2002-02-09  Richard Henderson  <rth@redhat.com>

	* config/tc-alpha.c (O_samegp): New.
	(USER_RELOC_P): Include it.
	(alpha_reloc_op_tag, debug_exp, find_macro_match): Add it.
	(md_apply_fix3): Handle BFD_RELOC_ALPHA_BRSGP.
	(alpha_force_relocation, alpha_fix_adjustable): Likewise.
	(alpha_validate_fix): New.
	* config/tc-alpha.h (TC_VALIDATE_FIX): New.

2002-02-09  Hans-Peter Nilsson  <hp@axis.com>

	* doc/c-cris.texi: New.
	* doc/all.texi: @set CRIS.
	* doc/as.texinfo: Ditto.  Add CRIS gas manpage option overview.
	Include c-cris.texi.
	* doc/Makefile.am (CPU_DOCS): Add c-cris.texi
	* doc/Makefile.in: Regenerate.

2002-02-08  Chris Demetriou  <cgd@broadcom.com>

	* config/tc-mips.c (IS_SEXT_32BIT_NUM): New macro to
	determine if a number is a sign-extended 32-bit number.
	(load_register): Use IS_SEXT_32BIT_NUM.
	(macro): Check if load/store macro handling is using a
	constant 32-bit address on 64-bit address systems, and if
	so optimize the generation of that address.

2002-02-08  Richard Henderson  <rth@redhat.com>

	* config/tc-alpha.c (alpha_force_relocation): Don't assert that
	we've eliminated all foreign relocation types yet.
	(alpha_fix_adjustable): Likewise.
